debug/cluster-policy-restrict-host-path-mount.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  annotations:
    meta.helm.sh/release-name: kyverno-kyverno-policies
    meta.helm.sh/release-namespace: kyverno
    pod-policies.kyverno.io/autogen-controllers: Deployment,ReplicaSet,DaemonSet,StatefulSet
    policies.kyverno.io/category: Best Practices (Security)
    policies.kyverno.io/description: hostPath volumes consume the underlying node's
      file system. If hostPath volumes are not universally disabled, they should be
      restricted to specific host paths to prevent access to sensitive information.
      This policy ensures that hostPath volume paths are in the allowed list. It is
      strongly recommended to pair this policy with another to require readOnly on
      hostPath volumes.
    policies.kyverno.io/minversion: 1.5.0
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/title: Restrict hostPath Volume Mountable Paths
  creationTimestamp: "2026-03-02T09:05:07Z"
  generation: 1
  labels:
    app: kyverno
    app.kubernetes.io/component: policy
    app.kubernetes.io/instance: kyverno-kyverno-policies
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kyverno-policies
    app.kubernetes.io/part-of: kyverno
    app.kubernetes.io/version: 3.3.4-bb.19
    helm.sh/chart: kyverno-policies-3.3.4-bb.19
    helm.toolkit.fluxcd.io/name: kyverno-policies
    helm.toolkit.fluxcd.io/namespace: bigbang
  name: restrict-host-path-mount
  resourceVersion: "490299"
  uid: 10d4aa3a-b1bd-4185-b80f-10dedf678168
spec:
  admission: true
  background: true
  emitWarning: false
  failurePolicy: Fail
  rules:
  - exclude:
      any:
      - resources:
          names:
          - svclb-*
          namespaces:
          - istio-system
      - resources:
          names:
          - monitoring-monitoring-prometheus-node-exporter*
          namespaces:
          - monitoring
      - resources:
          names:
          - neuvector-enforcer-pod*
          - neuvector-cert-upgrader-job-*
          - neuvector-controller-pod*
          namespaces:
          - neuvector
      - resources:
          names:
          - alloy-alloy-logs*
          namespaces:
          - alloy
    match:
      all:
      - resources:
          kinds:
          - Pod
    name: restrict-hostpath-dirs
    skipBackgroundRequests: true
    validate:
      allowExistingViolations: true
      message: hostPath volume paths are restricted to the allowed list.
      pattern:
        spec:
          =(volumes):
          - =(hostPath):
              path: ""
  validationFailureAction: Enforce
  webhookTimeoutSeconds: 30
status:
  autogen: {}
  conditions:
  - lastTransitionTime: "2026-03-05T08:17:47Z"
    message: Ready
    reason: Succeeded
    status: "True"
    type: Ready
  rulecount:
    generate: 0
    mutate: 0
    validate: 1
    verifyimages: 0
  validatingadmissionpolicy:
    generated: false
    message: skip generating ValidatingAdmissionPolicy for non CEL rules.
