debug/debug-authorization-policy-authservice-allow-all.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: debug-authservice-allow-all
  namespace: authservice
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: authservice
  action: ALLOW
  rules:
   - {}
