debug/debug-authorization-policy-monitoring-allow-all.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: debug-monitoring-allow-all
  namespace: monitoring
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: grafana
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["spiffe://cluster.local/ns/istio-gateway/sa/public-ingressgateway-ingressgateway-service-account"]
    - source:
        namespaces: ["istio-gateway"]
